ecmascript/parser/tests/test262-error-references/fail/c7ad2478fd72bffe.js.stderr
error: Declaration is now allowed
 --> $DIR/tests/test262-parser/fail/c7ad2478fd72bffe.js:1:13
  |
1 | for(a in b) function c(){}
  |             ^^^^^^^^

